# devenv

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .scrutinizer.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRUBUTING.md  LICENSE  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
devenv/: __init__.py  __main__.py  devenv.py  utils.py
devenv/scripts/all/: create_dir  create_dir.py  gitignore
devenv/scripts/python/: new_dir.py
devenv/scripts/vim/: create_plugin_template.py
doc/: conf.py  index.rst
docs/: conf.py  index.html  index.rst  search.json
docs/devenv/: devenv.html
docs/source/: devenv.rst  dvnv.rst  modules.rst
dvnv/: __init__.py  __main__.py  dvnv.py  utils.py
dvnv/scripts/all/: create_dir.py  create_readme.py  gitignore.py
dvnv/scripts/python/: new_dir.py  poetry_init.sh
scripts/all/: create-dir  create_dir  gen-license  gitignore
scripts/python/: new_dir.py
tests/: check_dir_test.py  choose_test.py  clean_input_test.py  confirm_test.py  copy_scripts_test.py  has_files_test.py  is_empty_test.py  list_langs_test.py  main_test.py  parse_args_test.py  print_error_test.py  python_new_dir_test.py  run_scripts_test.py
